--- a/templates/anexo/_anexoExtender.html.twig
+++ b/templates/anexo/_anexoExtender.html.twig
@@ -72,9 +72,9 @@
                 <table class="table table-head-fixed text-nowrap table-striped table-sm">
                     <thead>
                         <tr>
-                            <th>Id Servicio</th>
+                             <th>Id Servicio</th>
                             <th>Servicio</th>
-                            <th>Id Causa</th>
+                            <th>Causa/Rol</th>
                             <th>Caratulado</th>
                             <th>Juzgado</th>
                             <th></th>
