--- a/templates/anexo/_causasAnteriores.html.twig
+++ b/templates/anexo/_causasAnteriores.html.twig
@@ -7,16 +7,21 @@
                             {{causa.materiaEstrategia.estrategiaJuridica}}
                         </td>
                         <td>
+                        {% if causa.idCausa != null %}
                             {{causa.idCausa}}
+                        {% else %}
+                        {{causa.letra}}-{{causa.rol}}-{{causa.anio}} 
+                        {% endif %}
+                            
                         </td>
                         <td>
                             {{causa.causaNombre}}
                         </td>
                         <td>
-                            {{causa.juzgadoCuenta is null ? '': causa.juzgadoCuenta.juzgado.nombre}}
+                            {{causa.juzgado is null ? '': causa.juzgado.nombre}}
                         </td>
                         <td>
-                        <button type="button" class="btn btn-danger btn-sm" onclick="javascript:eliminarCausaAnterior({{causa.id}})"><i class="fa fa-trash"></i></button>
+                            <button type="button" class="btn btn-danger btn-sm" onclick="javascript:eliminarCausaAnterior({{causa.id}})"><i class="fa fa-trash"></i></button>
                         </td>
                     </tr>
                     
