--- a/templates/anexo/print.html.twig
+++ b/templates/anexo/print.html.twig
@@ -25,7 +25,7 @@
     <thead>
         <tr>
             <th width="300px">Servicio</th>
-            <th width="100px">Id Causa</th>
+            <th width="100px">Causa/Rol</th>
             <th>Caratulado</th>
         </tr>
     </thead>
@@ -39,7 +39,7 @@
                     {{causa.materiaEstrategia.estrategiaJuridica}}
                 </td>
                 <td width="100px">
-                    {{causa.idCausa}}
+                    {{causa.letra}}-{{causa.rol}}-{{causa.anio}}
                 </td>
                 <td>
                     {{causa.causaNombre}}
@@ -57,7 +57,7 @@
                     {{causa.materiaEstrategia.estrategiaJuridica}}
                 </td>
                 <td width="100px">
-                    {{causa.idCausa}}
+                     {{causa.letra}}-{{causa.rol}}-{{causa.anio}}
                 </td>
                 <td>
                     {{causa.causaNombre}}
