--- a/templates/contrato/_form.html.twig
+++ b/templates/contrato/_form.html.twig
@@ -331,24 +331,7 @@
     <h4 id="materia">Causa</h4>
     </div>
 </div>
-        <div class="row">
-             <div class="col-sm-12 col-md-3">
-                
-                <select name="corte" class="form-control corte">
-                    <option value=""> Seleccione Corte </option>
-                    
-                </select> 
-            </div>   
-            <div class="col-sm-12 col-md-6">
-                
-                <select name="juzgado" class="form-control juzgado">
-                    <option value=""> Seleccione Juzgado </option>
-                    {% for juzgado in juzgados %}
-                        <option value="{{juzgado.id}}">{{juzgado.nombre}}</option>
-                    {% endfor %}
-                </select> 
-            </div>   
-        </div>
+        
         <div class="row">
             
                 <select name="cboMateria" class="form-control cbomateria" placeholder="Materias" style="visibility:hidden" >
@@ -392,6 +375,24 @@
                 <button type="button" class="btn btn-primary btn-agregar" onclick="javascript:agregarCausa()"><i class="fas fa-plus"></i></button>
 
             </div>  
+        </div>
+        <div class="row">
+             <div class="col-sm-12 col-md-3">
+                
+                <select name="corte" class="form-control corte">
+                    <option value=""> Seleccione Corte </option>
+                    
+                </select> 
+            </div>   
+            <div class="col-sm-12 col-md-6">
+                
+                <select name="juzgado" class="form-control juzgado">
+                    <option value=""> Seleccione Juzgado </option>
+                    {% for juzgado in juzgados %}
+                        <option value="{{juzgado.id}}">{{juzgado.nombre}}</option>
+                    {% endfor %}
+                </select> 
+            </div>   
         </div>
         <div class="card-body" >
              <div id="estrategiasJuridicas">
@@ -692,7 +693,7 @@
             });
     }
     function obtenerCortes(cuenta){
-        if($(".cbomateria").val()=="1"){
+       
             $(".corte").show();
             $.ajax({
                 url:"/materia/"+cuenta+"/corte_combo",
@@ -709,14 +710,11 @@
                 success:function(data){
                     $(".corte").html(data);
                     //$(".loading").html('');
-                    console.log(data);
+                    $(".juzgado").empty();
+                    $(".juzgado").append("<option>Seleccione Juzgado</option>"); 
                 }
             });
-        }else{
-            $(".corte").hide();
-            $(".corte").val("");
-        }
-
+       
     }
 
     $(".corte").on("change",function(){
@@ -1199,25 +1197,6 @@
         }else{
              $("#acreedorVacio").html('');
         }
-        $.ajax({
-                url:"/juzgado_cuenta/"+cuenta+"/combo",
-                type: "post",
-                dataType: "html",
-                cache: false,
-                contentType: false,
-                processData: false,
-                async: true,
-                beforeSend: function(){
-                    //$(".loading").html(' <div class="overlay"><i class="fas fa-3x fa-sync-alt fa-spin"></i><div class="text-bold pt-2">Loading...</div></div>');
-                    
-                },
-                success:function(data){
-                    $(".juzgado").html(data);
-                    //$(".loading").html('');
-                }
-
-            });
-
     }
 
     $('.telefonoCliente').inputmask({mask:'+56999999999'});
