--- a/templates/contrato/lineaTiempoDetalle.html.twig
+++ b/templates/contrato/lineaTiempoDetalle.html.twig
@@ -15,8 +15,8 @@
                         <p>{{causa.id}}</p>
                     </div>
                     <div class="col-sm-6 col-md-2">
-                        <h5>Causa</h5>
-                        <p>{{causa.idCausa}}</p>
+                        <h5>Rit/Rol</h5>
+                        <p>{{causa.letra}}-{{causa.rol}}-{{causa.anio}}</p>
                     </div>
                     {% if causa.materiaEstrategia.estrategiaJuridica.lineaTiempo is not null %}
                     <div class="col-sm-6 col-md-2">
