--- a/templates/contrato/print.html.twig
+++ b/templates/contrato/print.html.twig
@@ -29,7 +29,7 @@ un contrato de prestaci&oacute;n de servicios jur&iacute;dicos, desglosando su c
         <tr>
             
             <th width="300px">Servicio</th>
-            <th width="100px">Id Causa</th>
+            <th width="100px">Causa/Rol</th>
             <th>Caratulado</th>
             
         </tr>
@@ -42,7 +42,7 @@ un contrato de prestaci&oacute;n de servicios jur&iacute;dicos, desglosando su c
                 {{causa.materiaEstrategia.estrategiaJuridica}}
             </td>
             <td width="100px">
-                {{causa.idCausa}}
+                {{causa.letra}}-{{causa.rol}}-{{causa.anio}}
             </td>
             <td>
                 {{causa.causaNombre}}
