--- a/templates/reporte/reporte_abogado.html.twig
+++ b/templates/reporte/reporte_abogado.html.twig
@@ -35,11 +35,10 @@
                         <option value="1" {% if tipoFecha==1 %}
                         selected
                     {% endif %}>Fecha Asignado</option>
-                        <!--<option value="2" {% if tipoFecha==2 %}
+                        <option value="0" {% if tipoFecha==0 %}
                         selected
-                    {% endif %}>Fecha Contrato</option>-->
-                       
-
+                    {% endif %}>Fecha Carga</option>
+                    
                     </select>
                 </div>
                 <div class="col-sm-12 col-md-3">
